--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"PNMultiHairMan的博客",
+    "subTitle":"*Mathematics* *Computer_science*  *Electronic_engineering*",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/124482205?v=4&size=64",
     "GMEEK_VERSION":"last"
 }
